--- a/Views/Interface/SuccessStoryButtonDetails.xaml
+++ b/Views/Interface/SuccessStoryButtonDetails.xaml
@@ -6,10 +6,6 @@
         xmlns:local="clr-namespace:SuccessStory.Views.Interface"
         mc:Ignorable="d" MinWidth="150" Height="40">
 
-    <Button.Resources>
-        <FontFamily x:Key="font">pack://application:,,,/CommonControls;component/Resources/font.ttf#font</FontFamily>
-    </Button.Resources>
-
     <Button.Style>
         <Style TargetType="{x:Type Button}" BasedOn="{StaticResource BaseStyle}">
             <Setter Property="Background" Value="{DynamicResource ButtonBackgroundBrush}" />
@@ -54,7 +50,7 @@
             <RowDefinition Height="18" />
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Content="" FontFamily="{StaticResource font}" Name="Sc_Icon100Percent" 
+        <Label Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Content="" FontFamily="{DynamicResource CommonFont}" Name="Sc_Icon100Percent" 
                VerticalAlignment="Center" FontSize="20" Margin="-3">
             <Label.Style>
                 <Style TargetType="Label">
